--- a/videosdk/src/main/res/values/strings.xml
+++ b/videosdk/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="query_server_production" translatable="false">http://queryreplica2.dabkick.com/</string>
     <string name="query_server_staging" translatable="false">http://stagingquery.dabkick.com/</string>
     <string name="send_button_label">Send</string>
+    <string name="chat">Chat</string>
 </resources>
