--- a/videosdk/src/main/res/values/strings.xml
+++ b/videosdk/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="query_server_staging" translatable="false">http://stagingquery.dabkick.com/</string>
     <string name="send_button_label">Send</string>
     <string name="chat">Chat</string>
+    <string name="chat_message_field_hint">Message…</string>
 </resources>
