create main video view, impl stop streaming, fix path for getting livestream token, begin logging Retrofit, fix permissions flow

--- a/videosdk/src/main/res/values/strings.xml
+++ b/videosdk/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="send_button_label">Send</string>
     <string name="chat">Chat</string>
     <string name="chat_message_field_hint">Message…</string>
+    <string name="permissions_needed">Permissions needed to start live streaming</string>
 </resources>
