refactor viewholders, show participant names, increase livestream adapter width

--- a/videosdk/src/main/res/values/strings.xml
+++ b/videosdk/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="chat">Chat</string>
     <string name="chat_message_field_hint">Message…</string>
     <string name="permissions_needed">Permissions needed to start live streaming</string>
+    <string name="me">Me</string>
 </resources>
